# daisypy-test

./: .gitignore  README.md  pyproject.toml
daisypy/test/: __init__.py  check_daisy.py  compare_dlf_files.py  compare_gnuplot_files.py  compare_log_files.py  compare_txt_files.py  sml.py  test_daisy.py  units.py
daisypy/test/sml-definitions/: chemical_content.toml  chemical_content_colloid.toml  colloids.toml  crop.toml  field_chemicals.toml  field_chemicals_N.toml  field_chemicals_colloid.toml  field_nitrogen.toml  field_water.toml  harvest.toml  sbarley.toml  soil_chemicals.toml  soil_chemicals_N.toml  soil_nitrogen.toml  soil_water.toml
